--- a/src/public/index.html
+++ b/src/public/index.html
@@ -2,13 +2,13 @@
 <html ng-app="app" lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Angular App</title>
+  <title>Fantasy App</title>
   <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <base href="/">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">  <base href="/">
 </head>
 <body>
-  <app></app>
+  <menu></menu>
+  <home></home>
 </body>
 </html>
